deploy/manifests/tmp/gitrello-deployment.yaml
# TODO add requests & limits
# TODO increase replicas
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmp
  labels:
    app: tmp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tmp
  template:
    metadata:
      labels:
        app: tmp
    spec:
      containers:
      - image: fnsdev/tmp:latest
        name: tmp
        ports:
        - containerPort: 80
          name: tmp
