deploy/manifests/tmp/gitrello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tmp
  labels:
    app: tmp
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  selector:
    app: tmp
  type: ClusterIP
