deploy/manifests/tmp/gitrello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tmp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - tmp.me
        - www.tmp.me
      secretName: tls
  rules:
    - host: tmp.me
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tmp
              port:
                number: 80
    - host: www.tmp.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tmp
                port:
                  number: 80
